# Anisearch

./: .gitignore  CHANGELOG.txt  LICENSE  README.md  pyproject.toml  setup.py  tox.ini  unit_tests.py
.github/workflows/: codeql-analysis.yml  python-publish.yml  python-test.yml
Anilist/: __init__.py  search.py
Anisearch/: __init__.py  async_connection.py  connection.py  datatype.py  enums.py  errors.py  fragment.py  get.py  retry.py  search.py
Anisearch/builders/: __init__.py  base.py  character.py  media.py  mutations.py  page.py  staff.py  studio.py
Anisearch/models/: __init__.py  _utils.py  character.py  connections.py  media.py  mutations.py  shared.py  staff.py  studio.py
tests/: test_builders.py  test_connection.py  test_generic.py  test_models.py  test_mutations.py
